# robot-neck

./: bottom_body v6.stl  opencv-apt-get-install.sh  spindle v5.stl
code/: CMakeLists.txt  main.cpp
code/arduino/: arduino.ino
