cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage main.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS})
find_package(Boost REQUIRED system) 
include_directories( ${Boost_INCLUDE_DIRS} )
target_link_libraries(DisplayImage ${Boost_LIBRARIES})
if(UNIX)
    add_definitions(-DUSING_UNIX=1)
endif(UNIX)
